sg.tf
# security groups
resource "aws_security_group" "allow_ssh" {
  name        = "IBM-WEB"
  description = "Allow SSH AND HTTP"
  vpc_id      = aws_vpc.ibm.id

  ingress {
    description = "SSH FROM WWW"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP FROM WWW"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "IBM-SSH-HTTP"
  }
}
